--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,5 +29,5 @@ androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifec
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt"}
+kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize" }
 
